Comments on scripts + Doc change + Bug fix
+ Attempt to hide scrollbar until hover
+ Fixed bug in UI Language selection
+ Comments on py files
+ Try to facilitate readability of code by delegating more work to parsers class.

--- a/my wordnet/static/style.css
+++ b/my wordnet/static/style.css
@@ -209,3 +209,6 @@
 .material-icons.md-48 {
     font-size: 48px;
 }
+#results:hover {
+    overflow-x:scroll;
+}
