--- a/pluricentric/static/style.css
+++ b/pluricentric/static/style.css
@@ -214,3 +214,7 @@
 .material-icons.md-48 {
     font-size: 48px;
 }
+
+#results:hover {
+    overflow-x:scroll;
+}
